--- a/scss/input.scss
+++ b/scss/input.scss
@@ -18,12 +18,8 @@
   width: 24px;
 }
 .picture-display{
-  width: 386px;
-  height: 186px;
-}
-.pizza-pics > img{
-  width: 88px;
-  height: 88px;
+  width: 25%;
+  height: 100%;
 }
 .middle{
 
