--- a/css/output.css
+++ b/css/output.css
@@ -2,28 +2,28 @@
 .top-header {
   display: flex;
   max-height: 222px;
-  max-width: 400px; }
+  max-width: 400px;
+}
 
 #top-logo {
   justify-content: center;
   height: 174px;
   width: 174px;
   margin-left: 50%;
-  margin-right: 50%; }
+  margin-right: 50%;
+}
 
 #mini-menu {
   justify-content: flex-start;
   align-self: center;
   height: 18px;
-  width: 24px; }
+  width: 24px;
+}
 
 .picture-display {
-  width: 386px;
-  height: 186px; }
-
-.pizza-pics > img {
-  width: 88px;
-  height: 88px; }
+  width: 25%;
+  height: 100%;
+}
 
 /* desktop */
 
