--- a/scss/input.scss
+++ b/scss/input.scss
@@ -1,4 +1,5 @@
 /* mobile */
+// TOP OF PAGE
 .top-header{
   display: flex;
   justify-content: space-around;
@@ -17,28 +18,46 @@
   height: 18px;
   width: 24px;
 }
+// PIZZA PIC DISPLAY
 .picture-display{
   display: flex;
   justify-content: center;
 }
 .top-pizza-pics{
-  width: 25vw;
+  width: 20vw;
   height: 25vw;
 }
 .middle{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  padding-left: 10vw;
+  text-align: center;
+}
+.bold-title{
+  font-size: 5vw;
+  font-weight: bold;
+  align-self: flex-start;
 }
 .bottom-bar{
   display: flex;
+  flex-wrap: wrap;
+  padding-left: 5vw;
+  padding-right: 5vw;
 }
 #video{
-  height: 50vw;
-  width: 50vw;
+  height: 60vw;
+  width: 80vw;
 }
 #pup-pic{
-  height: 30vw;
-  width: 100vw;
+  height: 50vw;
+  width: 80vw;
+}
+
+.red{
+  color: red;
 }
 
 /* desktop */
