--- a/scss/input.scss
+++ b/scss/input.scss
@@ -1,22 +1,44 @@
-/* mobile */
-// TOP OF PAGE
+
+body{
+  font-family: 'Open Sans', sans-serif;
+}
+#delivery-takeout{
+  display: none;
+  width: 15vw;
+}
+#delivery-takeout > img{
+  width: 150px;
+  height: 80px;
+}
+
 .top-header{
   display: flex;
   justify-content: space-around;
   max-height: 222px;
-  max-width: 100%;
+  max-width: 100vw;
 }
 #top-logo{
   justify-content: center;
-  height: 100vw;
-  width: 174px;
-
+  align-self: center;
+  height: 15vw;
+  width: 23vw;
 }
 #mini-menu{
   justify-content: flex-start;
   align-self: center;
-  height: 18px;
-  width: 24px;
+  height: 20px;
+  width: 20px;
+}
+#mini-menu > img{
+  align-self: center;
+  width: 20px;
+  height: 20px;
+}
+#right-side-bar{
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-self: center;
+  width: 10vw;
 }
 // PIZZA PIC DISPLAY
 .picture-display{
@@ -27,19 +49,29 @@
   width: 20vw;
   height: 25vw;
 }
-.middle{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.video{
   padding-left: 10vw;
   padding-right: 10vw;
-  padding-left: 10vw;
-  text-align: center;
 }
-.bold-title{
-  font-size: 5vw;
-  font-weight: bold;
-  align-self: flex-start;
+
+.middle{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
+#left-column{
+  justify-content: flex-start;
+  align-items: flex-end;
+  width: 70%;
+
+}
+#right-column{
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  padding-left: 10vw;
 }
 .bottom-bar{
   display: flex;
@@ -47,17 +79,34 @@
   padding-left: 5vw;
   padding-right: 5vw;
 }
-#video{
-  height: 60vw;
-  width: 80vw;
-}
-#pup-pic{
-  height: 50vw;
-  width: 80vw;
-}
 
+#pup-pic{
+  height: 30vw;
+  width: 100%;
+}
 .red{
   color: red;
 }
+.bottom-bar{
+  display: flex;
+  justify-content: flex-start;
+}
+// MEDIA QUERIES
+@media screen and (max-width:678px) {
+  .middle {
+    display: inline;
+  }
+  #right-side-bar{
+    display: none;
+  }
 
-/* desktop */
+}
+@media screen and (min-width:782px) {
+  #mini-menu {
+    display: none;
+  }
+  #delivery-takeout{
+    display: inline;
+  }
+
+}
